# scheduler-service

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  reset.py
scheduler/: __init__.py  client_status.py  config.py  globals.py  logger.py  main.py  strings.py  utils.py
scheduler/db/: __init__.py  manager.py  models.py  redis_manager.py
