[tool.poetry]
name = "scheduler-service"
version = "0.1.0"
description = ""
authors = ["Kamlesh Uikey <tokamleshuikey@gmail.com>"]
readme = "README.md"
packages = [{include = "scheduler_service"}]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
numpy = "^1.23.3"
python-dotenv = "^0.21.0"
redis = "^4.3.4"
networkx = "^2.8.6"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

